SynProdGITV1/force-app/main/default/objects/Case/fields/Approvals_Congratulations__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Congratulations__c</fullName>
    <description>Displays a congratulatory message when a specific milestone or achievement is reached</description>
    <inlineHelpText>Document any approvals received or congratulatory messages relevant to the resolution or handling of this case.</inlineHelpText>
    <label>Approvals &amp; Congratulations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>