SynProdGITV1/force-app/main/default/objects/Case/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Carrier linked to the complaint</description>
    <inlineHelpText>Select the carrier linked to the complaint</inlineHelpText>
    <label>Carrier</label>
    <referenceTo>Carrier__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>