SynProdGITV1/force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <description>Case age in days
Consider Date_Time_Closed__c for the 184 Cases that have issue with incorrect ClosedDate</description>
    <formula>IF( Mig_Error_Case__c , 
			IF( IsClosed ,  CEILING(Date_Time_Closed__c -  CreatedDate) ,  CEILING(Now() - CreatedDate) ),
			IF( IsClosed ,  CEILING(ClosedDate -  CreatedDate) ,  CEILING(Now() - CreatedDate) )
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the age of the case in days</inlineHelpText>
    <label>Case Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>