SynProdGITV1/force-app/main/default/objects/Case/fields/Case_Closed_Duration__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed_Duration__c</fullName>
    <description>Shows Days for which case is in Closed.
Consider Date_Time_Closed__c for the 184 Cases that have issue with incorrect ClosedDate</description>
    <formula>IF( Mig_Error_Case__c , 
			NOW() - Date_Time_Closed__c,
			NOW() - ClosedDate
		)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>