SynProdGITV1/force-app/main/default/objects/Case/fields/Case_Created_date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_date__c</fullName>
    <description>Field to capture the case reported date if the case was created later on the system.</description>
    <inlineHelpText>Please enter the date the complaint was received if the case was created later in the system.</inlineHelpText>
    <label>Case Created date</label>
    <type>DateTime</type>
</CustomField>