SynProdGITV1/force-app/main/default/objects/Case/fields/Case_Created_Year__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Year__c</fullName>
    <description>Contains the year in which case was created</description>
    <formula>TEXT(YEAR(DATEVALUE(CreatedDate)))</formula>
    <label>Case Created Year</label>
    <type>Text</type>
</CustomField>