SynProdGITV1/force-app/main/default/objects/Case/fields/Case_First_Closure_Completed__c.field-meta.xml
<CustomField>
    <fullName>Case_First_Closure_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case First Closure Completed</label>
    <type>Checkbox</type>
</CustomField>