SynProdGITV1/force-app/main/default/objects/Case/fields/Case_Members_And_Roles__c.field-meta.xml
<CustomField>
    <fullName>Case_Members_And_Roles__c</fullName>
    <label>Case Members And Roles</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>