SynProdGITV1/force-app/main/default/objects/Case/fields/Case_Open_Duration__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Duration__c</fullName>
    <description>Shows Days for which case was in open status</description>
    <formula>Initial_Review_Completed_Date__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Open Duration</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>