SynProdGITV1/force-app/main/default/objects/Case/fields/Caused_By_Plant__c.field-meta.xml
<CustomField>
    <fullName>Caused_By_Plant__c</fullName>
    <description>Checkbox indicating whether the root cause of the complaint is linked to a plant-related issue, such as production, packaging, or logistics errors.</description>
    <inlineHelpText>Select this checkbox if the issue was caused by a plant-related activity, such as production, packaging, or logistics within the plant.</inlineHelpText>
    <label>Caused By Plant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>