SynProdGITV1/force-app/main/default/objects/Case/fields/Close_KPI_Missed__c.field-meta.xml
<CustomField>
    <fullName>Close_KPI_Missed__c</fullName>
    <description>This formula field checks whether the Close KPI has been missed based on the age of the record</description>
    <formula>AND( NOT(ISPICKVAL( Status , &apos;Completed&apos;)),  NOT( Case_First_Closure_Completed__c ),
TODAY()- DATEVALUE(CreatedDate) &gt;  IF( Account.Group_Key__c ==  $CustomMetadata.Name_Value_Pair__mdt.Henkel_Group_Key.Value__c , 
VALUE($CustomMetadata.Name_Value_Pair__mdt.Henkel_Case_Close_KPI_Days.Value__c),  
VALUE($CustomMetadata.Name_Value_Pair__mdt.Case_Close_KPI_Days.Value__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close KPI Missed</label>
    <type>Checkbox</type>
</CustomField>