SynProdGITV1/force-app/main/default/objects/Case/fields/Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date__c</fullName>
    <description>Closure Date</description>
    <formula>IF(ISNULL(Date_Time_Closed__c),  ClosedDate ,Date_Time_Closed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Closure Data (calculated)</inlineHelpText>
    <label>Closure Date</label>
    <type>DateTime</type>
</CustomField>