SynProdGITV1/force-app/main/default/objects/Case/fields/Commercial_Action__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Action__c</fullName>
    <description>Specifies the commercial resolution or decision taken for the complaint, such as credit note, replacement, or no action.</description>
    <inlineHelpText>Select the appropriate commercial action taken to resolve the case</inlineHelpText>
    <label>Commercial Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replacement Order</fullName>
            </value>
            <value>
                <fullName>Return Order</fullName>
            </value>
            <value>
                <fullName>Billing Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>