SynProdGITV1/force-app/main/default/objects/Case/fields/Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Category__c</fullName>
    <description>Classifies the type of complaint associated with the case.</description>
    <inlineHelpText>Select the appropriate category that best describes the nature of the complain</inlineHelpText>
    <label>Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>