SynProdGITV1/force-app/main/default/objects/Case/fields/Complaint_Justified__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Justified__c</fullName>
    <description>Checkbox to confirm if the complaint is considered justified based on case findings.</description>
    <inlineHelpText>Select this checkbox if, after investigation, the complaint is determined to be valid or justified.</inlineHelpText>
    <label>Complaint Justified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>