SynProdGITV1/force-app/main/default/objects/Case/fields/Corrective_Action__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action__c</fullName>
    <description>Details of the actions taken to resolve the issue reported in the case. This helps track how the problem was addressed and prevents recurrence</description>
    <inlineHelpText>Provide detailed information on the corrective actions implemented to address the root cause of the complaint.</inlineHelpText>
    <label>Corrective Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>