SynProdGITV1/force-app/main/default/objects/Case/fields/Corrective_Action_Impl_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Impl_Due_Date__c</fullName>
    <description>This field is used for storing due date for implementation plan of the permanent corrective actions</description>
    <label>Corrective Action Implementatio Due Date</label>
    <type>Date</type>
</CustomField>