SynProdGITV1/force-app/main/default/objects/Case/fields/Corrective_Action_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Implementation__c</fullName>
    <description>This field captures the specific actions taken to address and rectify identified issues or non-conformities within the organization</description>
    <inlineHelpText>Describe the steps taken to implement the corrective action</inlineHelpText>
    <label>Corrective Action Implementation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>