SynProdGITV1/force-app/main/default/objects/Case/fields/Created_Month__c.field-meta.xml
<CustomField>
    <fullName>Created_Month__c</fullName>
    <label>Created Month</label>
    <length>15</length>
    <type>Text</type>
</CustomField>