SynProdGITV1/force-app/main/default/objects/Case/fields/CreatedBy_Name__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Name__c</fullName>
    <description>Stores the CreatedBy.Name for showing it on List View as List view only permit the createdby alias.[Hidden from UI]</description>
    <formula>CreatedBy.FirstName+&apos; &apos;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>