SynProdGITV1/force-app/main/default/objects/Case/fields/Customer_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback__c</fullName>
    <description>Captures the customer&apos;s comments or response related to the resolution of the case, used to evaluate service quality and improve future support.</description>
    <inlineHelpText>Enter any feedback received from the customer about their experience with the case resolution.</inlineHelpText>
    <label>Customer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>