SynProdGITV1/force-app/main/default/objects/Case/fields/Customer_Feedback_Documented_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Documented_Date__c</fullName>
    <description>SSP-176 This field will have the datetime at which Case was changed to &quot;Customer Feedback Documented&quot;</description>
    <inlineHelpText>Captures the date when the customer feedback status of the complaint was completed.</inlineHelpText>
    <label>Customer Feedback Documented Date</label>
    <type>DateTime</type>
</CustomField>