SynProdGITV1/force-app/main/default/objects/Case/fields/Customer_Feedback_Duration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Duration__c</fullName>
    <description>Shows Days for which case was in Customer Feedback status
Consider Date_Time_Closed__c for the 184 Cases that have issue with incorrect ClosedDate</description>
    <formula>IF( Mig_Error_Case__c , 
Date_Time_Closed__c -  Customer_Feedback_Documented_Date__c,
ClosedDate          -  Customer_Feedback_Documented_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Feedback Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>