SynProdGITV1/force-app/main/default/objects/Case/fields/Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed__c</fullName>
    <description>Date/Time Closed for 184 cases for which the closed date for not populated properly</description>
    <label>Date &amp; Time Closed</label>
    <type>DateTime</type>
</CustomField>