SynProdGITV1/force-app/main/default/objects/Case/fields/Defective_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Defective_Quantity__c</fullName>
    <description>Quantity of product reported as defective in the complaint, typically measured in the unit used for the order.</description>
    <inlineHelpText>Enter the number of defective items associated with this case.</inlineHelpText>
    <label>Defective Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>