SynProdGITV1/force-app/main/default/objects/Case/fields/Defective_Quantity_Unit__c.field-meta.xml
<CustomField>
    <fullName>Defective_Quantity_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Specifies the unit of measurement for the quantity of defective items reported in the case</description>
    <inlineHelpText>Links the defective quantity to the appropriate unit of measurement (UOM), such as pieces, kilograms, liters, etc.</inlineHelpText>
    <label>Defective Quantity Unit</label>
    <referenceTo>UoM_Std_Data__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>