SynProdGITV1/force-app/main/default/objects/Case/fields/Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Note__c</fullName>
    <description>Reference number or details from the delivery note associated with the case. Used to trace the shipment or delivery linked to the reported issue.</description>
    <inlineHelpText>Enter any relevant information about the delivery</inlineHelpText>
    <label>Delivery Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>