SynProdGITV1/force-app/main/default/objects/Case/fields/Delivery_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Order_Number__c</fullName>
    <description>Unique identifier of the delivery order associated with the complaint. Used to link the case to the corresponding delivery transaction.</description>
    <inlineHelpText>Enter the unique ID or reference number associated with the delivery order for this case.</inlineHelpText>
    <label>Delivery Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>