SynProdGITV1/force-app/main/default/objects/Case/fields/Dispatch_No__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_No__c</fullName>
    <description>&quot;Reference number of the dispatch linked to the complaint, used to trace the shipment related to the issue.&quot;</description>
    <inlineHelpText>Enter the unique dispatch number assigned to this shipment.</inlineHelpText>
    <label>Dispatch No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>