SynProdGITV1/force-app/main/default/objects/Case/fields/External_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Id__c</fullName>
    <description>Stores the external identifier for the case, often used to track or reference cases from external systems or partners.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the external case ID that corresponds to this record. This helps link the case to an external tracking system.</inlineHelpText>
    <label>External Case Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>