SynProdGITV1/force-app/main/default/objects/Case/fields/Global_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Global_Business_Unit__c</fullName>
    <description>SSP-288/SS2-T66: Formula field to get corresponding &apos;Global Business Unit&apos; value from Custom Object &apos;Industry Segment&apos; using the Case&apos;s &apos;Industry Segment&apos; field value selected by User</description>
    <formula>Industry_Segment__r.Parent__r.Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-populated when you select an industry segment.</inlineHelpText>
    <label>Global Business Unit</label>
    <type>Text</type>
</CustomField>