SynProdGITV1/force-app/main/default/objects/Case/fields/HQ_Account__c.field-meta.xml
<CustomField>
    <fullName>HQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the record to a specific HQ Account (Headquarters Account) within Salesforce.</description>
    <label>HQ Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>HQ</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>