SynProdGITV1/force-app/main/default/objects/Case/fields/Immediate_Action__c.field-meta.xml
<CustomField>
    <fullName>Immediate_Action__c</fullName>
    <description>Captures the immediate actions taken in response to a complaint or issue.</description>
    <inlineHelpText>Provide a detailed description of the immediate actions taken to address the issue</inlineHelpText>
    <label>Immediate Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>