SynProdGITV1/force-app/main/default/objects/Case/fields/Initial_Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Review_Completed_Date__c</fullName>
    <description>Captures the date and time when the initial review of the complaint was completed.</description>
    <inlineHelpText>Captures the date and time when the initial review status of the complaint was completed.</inlineHelpText>
    <label>Initial Review Completed Date</label>
    <type>DateTime</type>
</CustomField>