SynProdGITV1/force-app/main/default/objects/Case/fields/Initial_Review_Duration__c.field-meta.xml
<CustomField>
    <fullName>Initial_Review_Duration__c</fullName>
    <description>Shows Days for which case was in initial Review status</description>
    <formula>Investigation_Completed_Date__c -  Initial_Review_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Review Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>