SynProdGITV1/force-app/main/default/objects/Case/fields/Investigation_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Completed_Date__c</fullName>
    <description>Captures the date when the investigation into the complaint or issue was completed.</description>
    <inlineHelpText>Captures the date when the investigation status of the complaint was completed.</inlineHelpText>
    <label>Investigation Completed	Date</label>
    <type>DateTime</type>
</CustomField>