SynProdGITV1/force-app/main/default/objects/Case/fields/Investigation_Duration__c.field-meta.xml
<CustomField>
    <fullName>Investigation_Duration__c</fullName>
    <description>Shows Days for which case was in Investigation status</description>
    <formula>Customer_Feedback_Documented_Date__c -  Investigation_Completed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investigation Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>