SynProdGITV1/force-app/main/default/objects/Case/fields/Is_Reported_By_Me__c.field-meta.xml
<CustomField>
    <fullName>Is_Reported_By_Me__c</fullName>
    <description>Is the Case reported by Me?</description>
    <formula>$User.Id =  Reported_By__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reported By Me</label>
    <type>Checkbox</type>
</CustomField>