SynProdGITV1/force-app/main/default/objects/Case/fields/Is_User_part_of_Service_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Is_User_part_of_Service_Team_Member__c</fullName>
    <description>Is Logged user part of Service team member</description>
    <formula>OR(
    FIND($User.Id, Service_Team__r.ServiceTeamMemIDs1__c &amp; &quot;;&quot;) &gt; 0,
    FIND($User.Id, Service_Team__r.ServiceTeamMemIDs2__c &amp; &quot;;&quot;) &gt; 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User part of Service Team Member</label>
    <type>Checkbox</type>
</CustomField>