SynProdGITV1/force-app/main/default/objects/Case/fields/Mig_Error_Case__c.field-meta.xml
<CustomField>
    <fullName>Mig_Error_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set for all the Migrated Cases where the Migrated Closed date was not updated properly (184 cases in Prod)</description>
    <inlineHelpText>Set for all the Migrated Cases where the Migrated Closed date was not updated properly (184 cases in Prod)</inlineHelpText>
    <label>Mig Error Case</label>
    <type>Checkbox</type>
</CustomField>