SynProdGITV1/force-app/main/default/objects/Case/fields/Nature_of_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Complaint__c</fullName>
    <description>A brief summary or categorization of the issue reported by the customer, describing the type or cause of the complaint</description>
    <inlineHelpText>Select the nature or category of the complaint.</inlineHelpText>
    <label>Nature of Complaint</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Technical Service</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Response to Customer</fullName>
            </value>
            <value>
                <fullName>Product Safety (consider AIMS report)</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Customer Requests</fullName>
            </value>
            <value>
                <fullName>Cooperation</fullName>
            </value>
            <value>
                <fullName>Complaint Handling</fullName>
            </value>
            <value>
                <fullName>Availability of product</fullName>
            </value>
            <value>
                <fullName>Instructions</fullName>
            </value>
            <value>
                <fullName>Physical Properties</fullName>
            </value>
            <value>
                <fullName>Odour</fullName>
            </value>
            <value>
                <fullName>Infection</fullName>
            </value>
            <value>
                <fullName>Grit (fine coag)</fullName>
            </value>
            <value>
                <fullName>Gelling</fullName>
            </value>
            <value>
                <fullName>Flow Properties</fullName>
            </value>
            <value>
                <fullName>Creaming</fullName>
            </value>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Composition</fullName>
            </value>
            <value>
                <fullName>Coagulum / Lumps</fullName>
            </value>
            <value>
                <fullName>Application Properties</fullName>
            </value>
            <value>
                <fullName>Appearance</fullName>
            </value>
            <value>
                <fullName>Skins</fullName>
            </value>
            <value>
                <fullName>VOC</fullName>
            </value>
            <value>
                <fullName>Spec Visc</fullName>
            </value>
            <value>
                <fullName>Spec Solids</fullName>
            </value>
            <value>
                <fullName>Spec pH</fullName>
            </value>
            <value>
                <fullName>Spec Other</fullName>
            </value>
            <value>
                <fullName>Spec OH Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>