SynProdGITV1/force-app/main/default/objects/Case/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>If the complaint is not related CRM order then this field will be used to enter the ERP Order / Delivery Note Number//
Use this field for non-S4 orders only. For S4 orders, use the &quot;S4 Order&quot; field.</description>
    <inlineHelpText>Use this field for non-S4 orders only. For S4 orders, use the &quot;S4 Order&quot; field.</inlineHelpText>
    <label>Order Number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>