SynProdGITV1/force-app/main/default/objects/Case/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <description>Captures additional comments or information that is relevant but does not fit into other predefined fields.</description>
    <inlineHelpText>Provide any other comments, observations, or additional information that may be relevant to this record</inlineHelpText>
    <label>Other Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>