SynProdGITV1/force-app/main/default/objects/Case/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Stores the Owner.Name for showing it on List View as List view only permit the createdby alias.[Hidden from UI]</description>
    <formula>IF(
    ISBLANK(Owner:User.FirstName),
    Owner:Queue.Name,
    Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>