SynProdGITV1/force-app/main/default/objects/Case/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the record to the relevant plant or facility where the product was produced or handled.</description>
    <inlineHelpText>Select the plant or facility associated with this record.</inlineHelpText>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>