SynProdGITV1/force-app/main/default/objects/Case/fields/Preventive_Action__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Action__c</fullName>
    <description>This field captures detailed descriptions of the actions taken to prevent the recurrence of an issue or to mitigate risks</description>
    <inlineHelpText>Provide a detailed description of the preventive actions</inlineHelpText>
    <label>Preventive Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>