SynProdGITV1/force-app/main/default/objects/Case/fields/Preventive_Action_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Action_Due_Date__c</fullName>
    <description>This field is used for storing due date for Preventive actions</description>
    <label>Preventive Action Due Date</label>
    <type>Date</type>
</CustomField>