SynProdGITV1/force-app/main/default/objects/Case/fields/Preventive_Action_Status__c.field-meta.xml
<CustomField>
    <fullName>Preventive_Action_Status__c</fullName>
    <description>This field is used for storing Status for Preventive actions</description>
    <label>Preventive Action Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>