SynProdGITV1/force-app/main/default/objects/Case/fields/Primary_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Primary_Root_Cause__c</fullName>
    <description>Captures the primary root cause of the issue or complaint.</description>
    <inlineHelpText>Select the main cause behind the issue or complaint.</inlineHelpText>
    <label>Primary Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Act Of Nature</fullName>
            </value>
            <value>
                <fullName>Capability</fullName>
            </value>
            <value>
                <fullName>Communicable Disease</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Human Element</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>MoC</fullName>
            </value>
            <value>
                <fullName>No Cause</fullName>
            </value>
            <value>
                <fullName>Practices</fullName>
            </value>
            <value>
                <fullName>Recipes/Formulation</fullName>
            </value>
            <value>
                <fullName>Regulatory/Environmental</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>