SynProdGITV1/force-app/main/default/objects/Case/fields/Product_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Batch_Number__c</fullName>
    <description>Batch or lot number of the product involved in the complaint, used for traceability and quality investigation.</description>
    <inlineHelpText>Enter the batch number of the product associated with this case or transaction.</inlineHelpText>
    <label>Product Batch Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>